--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,3 +35,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
+
+dependencies {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    implementation group: 'com.kakao.sdk', name: 'newtone', version: '6.0.1'
+}
