--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation group: 'com.kakao.sdk', name: 'newtone', version: '6.0.1'
+    implementation 'com.github.angads25:toggle:1.1.0'
+    implementation "com.github.skydoves:expandablelayout:1.0.5"
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
+    implementation 'com.github.angads25:toggle:1.1.0'
 }
