--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.ddukddak.sangsa.DeviceListActivity"
+            android:theme="@android:style/Theme.DeviceDefault.Dialog">
+
+        </activity>
         <activity android:name=".MainActivity"> </activity>
         <service
             android:name=".NotificationListener"
@@ -49,5 +53,10 @@
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key" />
     </application>
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
+
 
 </manifest>
